--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <p>
 "Olá mundo"
     </p>
+
+    <footer>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem facilis ad voluptate corporis odio rem natus nisi. Nisi quidem doloremque voluptates eaque voluptatum architecto explicabo officia amet tempora? Sequi, tempore?
+    </footer>
 </body>
 </html>
