--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <p>
-"Olá mundo"
-    </p>
-
-    <footer>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem facilis ad voluptate corporis odio rem natus nisi. Nisi quidem doloremque voluptates eaque voluptatum architecto explicabo officia amet tempora? Sequi, tempore?
-    </footer>
+   <h1>Olá mundo!</h1>
+    <main>
+        <h2>Alteração feita pelo vermelho</h2>
+        <section>
+            <article>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem facilis ad voluptate corporis odio rem natus nisi. Nisi quidem doloremque voluptates eaque voluptatum architecto explicabo officia amet tempora? Sequi, tempore?
+            </article>
+        </section>
+    </main>
 </body>
 </html>
